--- a/resume2.0/WeTalk/index.css
+++ b/resume2.0/WeTalk/index.css
@@ -3,3 +3,8 @@
 .display-inline {display: inline;}
 .display-block {display: block;}
 .pointer{cursor:pointer}
+.scroll{overflow: scroll}
+#message{
+  height:400px;
+  overflow:scroll;
+}
